# Othello

./: CMakeLists.txt  README.md  decisions.docx  info.txt  main.cpp  makefile
etc/: info.txt  logs_file.txt
exe/: a.out_client  a.out_server  client_settings.txt  makefile  makefile.cli  makefile.ser  server_settings.txt
include/: AIplayer.h  BasicRules.h  Board.h  CharBoard.h  ConsoleGameFlow.h  ConsoleMenu.h  Coordinates.h  Display.h  Game.h  GameFlowLook.h  GameLogic.h  HumanPlayer.h  Menu.h  Player.h  PreviousInfo.h
src/: AIplayer.cpp  BasicRules.cpp  Board.cpp  CharBoard.cpp  ConsoleGameFlow.cpp  ConsoleMenu.cpp  Coordinates.cpp  Game.cpp  GameFlowLook.cpp  GameLogic.cpp  HumanPlayer.cpp  Menu.cpp  Player.cpp  PreviousInfo.cpp  main.cpp
src/client/: main.cpp  makefile
src/client/include/: AIplayer.h  ConsoleDisplay.h  ConsoleMenu.h  Coordinates.h  Display.h  Game.h  GameLogic.h  GameSetup.h  HumanPlayer.h  Listener.h  Menu.h  MoveTracker.h  PlayerFactory.h  PreviousInfo.h  RemotePlayer.h  ServerListener.h
src/client/src/: AIplayer.cpp  Board.cpp  ConsoleDisplay.cpp  ConsoleMenu.cpp  Coordinates.cpp  Game.cpp  GameLogic.cpp  GameSetup.cpp  HumanPlayer.cpp  Listener.cpp  Menu.cpp  MoveTracker.cpp  Player.cpp  PlayerFactory.cpp  RemotePlayer.cpp  ServerListener.cpp
src/client/test/: AIplayerTest.h  BasicRulesTest.h  gtest_main.cpp
src/server/: Server.cpp  Server.h  main_s.cpp  makefile
src/server/include/: ClientHandler.h  CloseCommand.h  Command.h  CommandsManager.h  GameManager.h  GameRoom.h  JoinCommand.h  ListCommand.h  MutexManager.h  PlayCommand.h  RoomsManager.h  Server.h  StartCommand.h  Task.h  ThreadManager.h  ThreadPool.h
src/server/src/: ClientHandler.cpp  CloseCommand.cpp  Command.cpp  CommandsManager.cpp  GameManager.cpp  GameRoom.cpp  JoinCommand.cpp  ListCommand.cpp  MutexManager.cpp  PlayCommand.cpp  RoomsManager.cpp  Server.cpp  StartCommand.cpp  ThreadManager.cpp  ThreadPool.cpp
test/: AIplayerTest.h  BasicRulesTest.h  BoardTest.h  CoordinatesTest.h  factorial.cpp  factorial.h  gtest_main.cpp  test_factorial.cpp
